Clean Code Change